# picsavbot

./: .gitignore  Cargo.toml  Dockerfile  app.py  download.py  flake.nix  pyproject.toml
entities/src/: images.rs  lib.rs  messages.rs  prelude.rs  sea_orm_active_enums.rs  users.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20240205_113957_create_users.rs  m20240205_114643_create_images.rs  m20240214_091109_add_image_type.rs  m20240214_125213_image_uses_count.rs  m20240326_130351_add_video_type.rs  main.rs
src/: db.rs  main.rs
