[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
tokio.workspace = true
sea-orm.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dependencies.sea-orm-migration]
version = "0.12"
features = [
  "runtime-tokio-native-tls",
  "sqlx-postgres"
]
